    those wallets before doing it.
  * Added a popup dialog confirming how many Electron Cash wallets were imported by the user,
    which will give the user feedback that something actually happened.
  * Include the new logos and icons kindly provided by the Bitcoin Association. Thanks again to
    MrScatman (https://twitter.com/bsmith12251960) for the original icon.
  * Fix a bug where importing or sweeping a private key would error
    (https://github.com/electrumsv/electrumsv/issues/45).

# Release 1.1.0
  * Check for updated versions on startup, and indicates updates in the wallet UI.
  * Various hardware wallet fixes.  Note hardware wallets may display Bitcoin Cash
    addresses instead of Bitcoin addresses; this is out of our control and pending
    firmware updates.  For similar reasons they may also warn about addresses being
    incorrect for the coin type; these warnings may be ignored.
  * New blockchain parsing and fork handling code, replacing the historically unstable code.
  * Tentative support for file attachments in OP_RETURN pushdatas when sending a transaction.
  * Support for new ?sv style urls, which are also used in QR codes.
  * Console tab improvements and warning.
  * Addition of a preliminary log viewer.
  * Address converter tab removed.  ElectrumSV still accepts Bitcoin Cash "cashaddr"
    addresses but only displays Bitcoin addresses.  A future release will remove support for
    cashaddr entirely.
  * Removal of all plugins.  Two plugins become extensions: cosigner pool, and labelsync.
    Audio modem support has been removed.  Virtual keyboard support is now in all password
    fields.
  * Testnet: testnet now uses the correct tpub, tprv derivations and not mainnet's xpub, xprv
    derivations.
  * Many fixes and internals improvements.

# Release 1.0.0
  * Coin splitting support.
  * Checkpoints locking the blockchain to the Bitcoin SV fork.
  * Bitcoin SV related block explorers.
  * Bitcoin SV related exchange rate services.